# EngineOpenGL

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_windows.yml
libs/: CMakeLists.txt
libs/ImGuizmo/: CMakeLists.txt
libs/glm/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
libs/spdlog/: CMakeLists.txt
src/core/: AppMain.cpp  Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.hpp  BindGuard.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Cubemap.cpp  CursorPositionHandler.cpp  CursorPositionHandler.hpp  Debug.hpp  ElementBufferObject.cpp  ElementBufferObject.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EnumFactoryMap.cpp  EnumFactoryMap.hpp  Event.hpp  FPSLimiter.cpp  FPSLimiter.hpp  Frustum.cpp  Frustum.hpp  GPUBuffers.cpp  GPUBuffers.hpp  Globals.hpp  ISerializable.hpp  ITickable.hpp  IdGenerator.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  Light.cpp  Light.hpp  Logger.hpp  Macros.hpp  MainWindow.cpp  (+54 more)
src/ge/: BezierCurve.cpp  BezierCurve.hpp  BoundingBox.cpp  BoundingBox.hpp  Cube.cpp  Cube.hpp  Curve.cpp  Curve.hpp  Entity.hpp  Face.cpp  Face.hpp  GeometryFactory.cpp  GeometryFactory.hpp  IDrawable.hpp  IRayHittable.hpp  Icosahedron.cpp  Icosahedron.hpp  ItemSelectionWheel.cpp  ItemSelectionWheel.hpp  Mesh.cpp  Mesh.hpp  Object3D.cpp  Object3D.hpp  Polyline.cpp  Polyline.hpp  Pyramid.cpp  Pyramid.hpp  (+8 more)
tests/: CMakeLists.txt  EventHandlerTests.cpp  EventTests.cpp  RayTests.cpp  ReflectionTests.cpp  RttiTests.cpp  SerializerTests.cpp
(+80 files in other folders)
